--- a/설명.md
+++ b/설명.md
@@ -1,45 +1,46 @@
-### 1. backend 폴더 안에서 django-admin startproject config . 으로 장고 프로젝트 생성
-### 2. .gitignore 파일 업데이트
-### 3. python manage.py runserver 로 기본화면 나오는지 확인 
+### 1. 배포환경을 위하여 settings 파일을 3개로 나눔
 
-DB 생성
-### 4.  python manage.py makemigrations
-### 5.  python manage.py migrate
+│   ├── settings
+│   ├────-dev.py
+│   ├────-prod.py
+│   ├────-base.py
 
-main 페이지 생성 및 간단 API 하나 생성
-### 6. templates 폴더를 만든후 main.html 생성
-
-api json 간단 프로그램 만들기 
-
-### 7. python manage.py startapp api 
+### 2. BASE_DIR 수정
 
 ```
-추가)
-INSTALLED_APPS = [
-    ...
-    'rest_framework',
-    'api',
-]
+# settings/config 기준
+BASE_DIR = Path(__file__).resolve().parent.parent.parent  
+print("베이스 디렉토리",BASE_DIR)
 ```
-### 8. categories 모델을 생성 마이그레이션
-   python manage.py makemigrations
-   python manage.py migrate
+
+
+#### 3. 도커 이미지 삭제 명령
+docker images --format "{{.Repository}} {{.ID}}" | grep '^django-react-hjs-distribute' | awk '{print $2}' | xargs -r docker rmi -f
+
+
+REPOSITORY                            TAG       IMAGE ID       CREATED        SIZE
+django-react-hjs-distribute          latest    abc123         2 hours ago    500MB
+django-react-hjs-distribute-dev      v1        def456         1 hour ago     510MB
+django-react-hjs-distribute-test     v2        ghi789         30 minutes ago 490MB
+
+
+
+### 4.전체적인 파일 구조는 아래와 같음
 
 ### 전체 폴더 구조
 django-react-hjs-distribute/
 ├── docker-compose.yml
-├── docker/
-│   └──nginx 
-│   └──backend 
-│   └──frontend 
+├── nginx/
+│   └──default.conf 
 ├── backend/
-│   ├── 
+│   ├── settings
+│   ├────-dev.py
+│   ├────-prod.py
+│   ├────-base.py
 │   └── manage.py (및 Django 프로젝트)
+│   └── Dockerfile
 ├── frontend/
 │   ├── vite.config.js
 │   ├── index.html
 │   └── src/
 │       └── ...
-
-2. 깃허브 올리기
-.gitignore 추가
