--- a/설명.md
+++ b/설명.md
@@ -25,7 +25,10 @@ django-react-hjs-distribute-test     v2        ghi789         30 minutes ago 490
 
 
 
-### 4.전체적인 파일 구조는 아래와 같음
+### 4. 배포 학습시 어려운점
+1. 서버(로컬, runner, ec2, 도커)들 과의 관계과 조금 복잡함. 그중에서도 상대/ 절대 경로 처리가 헤깔림
+2. Nginx 와 위스기(유니콘)에 대한 이해
+3. 보안 관련 내용 처리(CORS,CSRF) - 서버및 클라이언트 관련 처리 
 
 ### 전체 폴더 구조
 django-react-hjs-distribute/
@@ -40,7 +43,4 @@ django-react-hjs-distribute/
 │   └── manage.py (및 Django 프로젝트)
 │   └── Dockerfile
 ├── frontend/
-│   ├── vite.config.js
-│   ├── index.html
-│   └── src/
-│       └── ...
+
