--- a/설명.md
+++ b/설명.md
@@ -30,6 +30,52 @@ django-react-hjs-distribute-test     v2        ghi789         30 minutes ago 490
 2. Nginx 와 위스기(유니콘)에 대한 이해
 3. 보안 관련 내용 처리(CORS,CSRF) - 서버및 클라이언트 관련 처리 
 
+#### 5. Nginx
+1. 동시 접속(7000명 이상)에서의 탁월한 성능(단일쓰레드 이벤트 큐 기반)
+2. 로드 밸런싱
+3. 프록시 제공
+
+#### 5. Nginx 사용 - 설정 파일 2개 정도로 컨트롤
+
+기본 설정 파일:
+
+Ubuntu 및 Debian: /etc/nginx/nginx.conf
+CentOS 및 RHEL: /etc/nginx/nginx.conf
+macOS (Homebrew): /usr/local/etc/nginx/nginx.conf
+Windows: 설치 디렉토리\conf\nginx.conf
+
+```
+user nginx;
+worker_processes auto;
+error_log /var/log/nginx/error.log warn;
+pid /var/run/nginx.pid;
+
+events {
+    worker_connections 1024;
+}
+
+http {
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
+
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
+
+    access_log  /var/log/nginx/access.log  main;
+
+    sendfile        on;
+    tcp_nopush      on;
+    keepalive_timeout  65;
+    types_hash_max_size 2048;
+
+    //추가 설정 파일
+    include /etc/nginx/conf.d/*.conf; 
+}
+```
+
+
+
 ### 전체 폴더 구조
 django-react-hjs-distribute/
 ├── docker-compose.yml
