--- a/설명.md
+++ b/설명.md
@@ -1,93 +1,58 @@
-### 1. 배포환경을 위하여 settings 파일을 3개로 나눔
-
-│   ├── settings
-│   ├────-dev.py
-│   ├────-prod.py
-│   ├────-base.py
-
-### 2. BASE_DIR 수정
+### 1. .env.prod
 
 ```
-# settings/config 기준
-BASE_DIR = Path(__file__).resolve().parent.parent.parent  
-print("베이스 디렉토리",BASE_DIR)
+# Django 환경 설정
+DJANGO_SETTINGS_MODULE=backend.config.settings.prod
+DJANGO_SECRET_KEY=your-secure-production-secret-key
+DJANGO_DEBUG=False
+DJANGO_ALLOWED_HOSTS=yourdomain.com,www.yourdomain.com
+
+# 데이터베이스 설정
+POSTGRES_DB=your_db_name
+POSTGRES_USER=your_db_user
+POSTGRES_PASSWORD=your_secure_db_password
+POSTGRES_HOST=db
+POSTGRES_PORT=5432
+
+# Static & Media (Optional if needed)
+STATIC_URL=/static/
+MEDIA_URL=/media/
+
+# 기타 (예: 이메일, AWS, Redis, 등 필요 시)
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_HOST_USER=your_email@gmail.com
+EMAIL_HOST_PASSWORD=your_email_password
+EMAIL_USE_TLS=True
 ```
 
-
-#### 3. 도커 이미지 삭제 명령
-docker images --format "{{.Repository}} {{.ID}}" | grep '^django-react-hjs-distribute' | awk '{print $2}' | xargs -r docker rmi -f
-
-
-REPOSITORY                            TAG       IMAGE ID       CREATED        SIZE
-django-react-hjs-distribute          latest    abc123         2 hours ago    500MB
-django-react-hjs-distribute-dev      v1        def456         1 hour ago     510MB
-django-react-hjs-distribute-test     v2        ghi789         30 minutes ago 490MB
-
-
-
-### 4. 배포 학습시 어려운점
-1. 서버(로컬, runner, ec2, 도커)들 과의 관계과 조금 복잡함. 그중에서도 상대/ 절대 경로 처리가 헤깔림
-2. Nginx 와 위스기(유니콘)에 대한 이해
-3. 보안 관련 내용 처리(CORS,CSRF) - 서버및 클라이언트 관련 처리 
-
-#### 5. Nginx
-1. 동시 접속(7000명 이상)에서의 탁월한 성능(단일쓰레드 이벤트 큐 기반)
-2. 로드 밸런싱
-3. 프록시 제공
-
-#### 5. Nginx 사용 - 설정 파일 2개 정도로 컨트롤
-
-기본 설정 파일:
-
-Ubuntu 및 Debian: /etc/nginx/nginx.conf
-CentOS 및 RHEL: /etc/nginx/nginx.conf
-macOS (Homebrew): /usr/local/etc/nginx/nginx.conf
-Windows: 설치 디렉토리\conf\nginx.conf
-
+### 2. 사용 방법
 ```
-user nginx;
-worker_processes auto;
-error_log /var/log/nginx/error.log warn;
-pid /var/run/nginx.pid;
+docker-compose.yml에서 적용
+services:
+  backend:
+    env_file:
+      - .env.prod
+----------------------------------------------------------------
+### prod.py
 
-events {
-    worker_connections 1024;
-}
+import os
+from pathlib import Path
 
-http {
-    include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
-
-    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-                      '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for"';
-
-    access_log  /var/log/nginx/access.log  main;
-
-    sendfile        on;
-    tcp_nopush      on;
-    keepalive_timeout  65;
-    types_hash_max_size 2048;
-
-    //추가 설정 파일
-    include /etc/nginx/conf.d/*.conf; 
-}
+# 예시: 환경 변수 가져오기
+SECRET_KEY = os.getenv("DJANGO_SECRET_KEY")
+DEBUG = os.getenv("DJANGO_DEBUG", "False") == "True"
+ALLOWED_HOSTS = os.getenv("DJANGO_ALLOWED_HOSTS", "").split(",")
 ```
-
-
 
 ### 전체 폴더 구조
 django-react-hjs-distribute/
 ├── docker-compose.yml
-├── nginx/
-│   └──default.conf 
 ├── backend/
-│   ├── settings
-│   ├────-dev.py
-│   ├────-prod.py
-│   ├────-base.py
+│   ├── 
 │   └── manage.py (및 Django 프로젝트)
 │   └── Dockerfile
-├── frontend/
 
 
+2. 깃허브 올리기
+.gitignore 추가
